--- a/widget/html/frame1.html
+++ b/widget/html/frame1.html
@@ -8,7 +8,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
-<meta http-equiv="refresh" content="0.1;url=http://www.22ss.top">
+<meta http-equiv="refresh" content="0.1;url=http://b.17freed.cn/">
 <title></title>
 </head>
 <body>
