--- a/widget/index.html
+++ b/widget/index.html
@@ -51,7 +51,7 @@
 
     <ul>
       <li class="border-b active">      <a class="aui-navBar-item masked"   id="tietle" > 今日影院  <i class="icon icon-Disconnect-r" style=" margin-left: 10px; "></i> </a> </li>
-      <li class="border-b">     <a class="aui-navBar-item">双12红包 领劵下单</a> </li>      
+      <li class="border-b">     <a class="aui-navBar-item">领劵下单</a> </li>      
       <li class="border-b">     <a class="aui-navBar-item">影视大厅</a> </li>
       <li class="border-b">     <a class="aui-navBar-item">福利中心</a> </li>
       <li class="border-b">     <a class="aui-navBar-item">会员中心</a> </li>
@@ -89,7 +89,7 @@
     <div id="footer" class="border-t" >
         <ul class="flex-wrap" style="font-weight:bold">
             <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con active" >首页</li>
-            <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >双12</li>            
+            <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >领券</li>            
             <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >大厅</li>
             <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >福利</li>
             <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >我的</li>
